// Original file: node_modules/soum-proto/proto/category.proto

export interface GetCatConPriceRangeRequest {
  variantId?: string;
  conditionId?: string;
  catConditionQuality?: string;
}

export interface GetCatConPriceRangeRequest__Output {
  variantId: string;
  conditionId: string;
  catConditionQuality: string;
}
