// Original file: node_modules/soum-proto/proto/category.proto

export interface GetCategoryConditionRequest {
  variantId?: string;
  conditionId?: string;
  catConditionQuality?: string;
}

export interface GetCategoryConditionRequest__Output {
  variantId: string;
  conditionId: string;
  catConditionQuality: string;
}
